# axon

./: .gitignore  CMakeLists.txt  INSTALL-el9.md  INSTALL.md  LICENSE  README.md  version
axon/: CMakeLists.txt  README.md
axon/cmake/: FindAVRO.cmake  FindSMB2.cmake  systemdservice.cmake
axon/include/: Makefile.am  axon.h  config.h  connection.h  database.h  file.h  ftp.h  kerberos.h  log.h  message.h  node.h  ssh.h  telecom.h  util.h
axon/include/axon/: aes.h  config.h  connection.h  database.h  dmi.h  file.h  ftp.h  hdfs.h  kerberos.h  log.h  oracle.h  s3.h  samba.h  socket.h  sqlite.h  ssh.h  uri.h  util.h
axon/src/: CMakeLists.txt  aes.cpp  config.cpp  connection.cpp  database.cpp  dmi.cpp  file.cpp  ftp.cpp  ftplist.cpp  hdfs.cpp  kerberos.cpp  log.cpp  message.cpp  mml.cpp  node.cpp  oracle.cpp  s3.cpp  samba.cpp  socket.cpp  sqlite.cpp  ssh.cpp  util.cpp
cmake/: FindAVRO.cmake  FindBLKID.cmake  FindCONFIG.cmake  FindCrypt.cmake  FindGSSAPI.cmake  FindHDFS.cmake  FindHDFS3.cmake  FindKRB5.cmake  FindLIBSSH2.cmake  FindLibMagic.cmake  FindORACLE.cmake  FindRDKAFKA.cmake  FindRdKafka.cmake  FindSERDES.cmake  FindSMB2.cmake  FindSerDes.cmake  FindZSTD.cmake  Findblkid.cmake  compiler.cmake  definitions.cmake  dependencies.cmake  macros.cmake  packaging.cmake  targets.cmake
empyreal/: .gitignore  CMakeLists.txt
empyreal/cmake/: FindConfig++.cmake
empyreal/extras/: empyreal.service.cmake
empyreal/include/: config.h  connection.h  database.h  file.h  ftp.h  ftplist.h  logger.h  main.h  msg.h  node.h  socket.h  ssh.h  util.h
empyreal/src/: CMakeLists.txt  config.cpp  connection.cpp  database.cpp  ftp.cpp  ftplist.cpp  logger.cpp  main.cpp  node.cpp  socket.cpp  ssh.cpp  util.cpp
examples/: CMakeLists.txt  cfg.cpp  connector.cpp  counter.cpp  database.cpp  entity.h  exprtk.hpp  ftp.cpp  kafka.cpp  kinesis.cpp  krb5.cpp  ldap.cpp  license.cpp  log.cpp  logger.cpp  logica.cpp  logica.h  mail.cpp  msg.cpp  oracle.cpp  rabbitmq.cpp  read_topic.cpp  sftp.cpp  smb.cpp  sqlite.cpp  stream.cpp  transfer.cpp  try_compile_variant.cpp
experiment/: CMakeLists.txt
extras/: axon.h.in  axon.pc.in  axon.spec.in  notes.md
extras/scripts/: pre-install.sh.in
hyperion/: CMakeLists.txt
hyperion/extras/: example.cfg  hyperion.service.cmake
hyperion/include/: cluster.h  drone.h  interface.h  node.h  sendmail.h
hyperion/src/: CMakeLists.txt  cluster.cpp  drone.cpp  main.cpp  node.cpp  sendmail.cpp
include/: axon.h  version.h
include/axon/: aes.h  aws.h  config.h  connection.h  cqn.h  database.h  database2r.h  defines.h.in  dmi.h  file.h  filter.h  fstream.h  ftp.h  ftplist.h  hdfs.h  kafka.h  kerberos.h  kinesis.h  ldap.h  log.h  mail.h  md5.h  message.h  mml.h  nothing.h  oci.h  ocn.h  oracle.h  rabbit.h  recordset.h  recordset2r.h  redis.h  resultset.h  s3.h  samba.h  scylla.h  scylladb.h  socket.h  sqlite.h  ssh.h  (+6 more)
sentinel/: CMakeLists.txt
sentinel/extras/: email.html
sentinel/include/: cluster.h  drone.h  main.h  node.h  sendmail.h
sentinel/src/: CMakeLists.txt  cluster.cpp  drone.cpp  main.cpp  node.cpp  sendmail.cpp
src/: CMakeLists.txt  Makefile.am  aes.cpp  aws.cpp  axon.cpp  config.cpp  connection.cpp  cqn.cpp  dmi.cpp  file.cpp  fstream.cpp  ftp.cpp  ftplist.cpp  hdfs.cpp  kafka.cpp  kerberos.cpp  kinesis.cpp  ldap.cpp  log.cpp  mail.cpp  md5.cpp  message.cpp  mml.cpp  nothing.cpp  oci.cpp  ocn.cpp  oracle.cpp  rabbit.cpp  recordset.cpp  recordset2r.cpp  redis.cpp  resultset.cpp  s3.cpp  samba.cpp  scylla.cpp  scylladb.cpp  socket.cpp  sqlite.cpp  ssh.cpp  stream.cpp  (+2 more)
